# acmlib

./: .gitignore  Geometry.cpp  Geometry.h  Geometry.hpp  ModField.cpp  ModInt.cpp  ModRing.cpp  ModRingMany.cpp  PowerSeriesPrimeModulo.cpp  PrimeField.cpp  Template.cpp  factor64.cpp
benchmark/: CMakeLists.txt  GeometryBM.cpp  disable-cpu-scaling.py
test/: CMakeLists.txt  GeometryTest.cpp
unittest/: .nvimrc  GeometryTest.cpp  compile_commands.json  neovim.json
